[project]
name = "claude-preview"
version = "0.1.0"
description = "Interactive Claude coding session with a live split-screen preview pane in the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0",
    "rich>=13.0",
    "anthropic>=0.49",
]

[project.scripts]
claude-preview = "claude_preview:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["claude_preview"]
