[project]
name = "claude-preview"
version = "0.1.0"
description = "Cursor-style Claude coding agent in your terminal — works in a folder you pick, on your Claude Code login"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0",
    "rich>=13.0",
    "claude-agent-sdk>=0.2",
]

[project.scripts]
claude-preview = "claude_preview:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["claude_preview"]
